# simmes

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
simmes/: GRB.py  PLOTGRB.py  PLOTRSP.py  PLOTS.py  PLOTSAMPLE.py  PLOTSIMRES.py  PLOTTRIGS.py  RSP.py  SPECFUNC.py  bayesian_block.py  fluence.py  scripts.py  simulations.py  threshold_search.py  trigger_scan.py
simmes/unit_tests/: test_class_SPECFUNC.py  test_package_bayesian_block.py  test_package_cosmology.py  test_package_det_ang_dependence.py
simmes/unit_tests/test_files/: grb_130831A_1chan_1s.txt  grb_130831A_1chan_64ms.txt  grb_160314A_1chan_1s.txt  grb_160314A_1chan_64ms.txt
simmes/util_packages/: cosmology.py  datatypes.py  det_ang_dependence.py  fluctuations.py  globalconstants.py
simmes/util_packages/files-det-ang-dependence/: gridnum_imx_imy.txt  pickled_interpolator.pck
simmes/util_packages/files-spec-unc/: bat-chan-sys-err-fracs.txt  spec-unc-fit-params.txt
simmes/util_packages/files-swift-bat-resps/: bat_grid_09.rsp  bat_grid_10.rsp  bat_grid_12.rsp  bat_grid_14.rsp  bat_grid_16.rsp  bat_grid_17.rsp  bat_grid_19.rsp  bat_grid_21.rsp  bat_grid_29.rsp  bat_grid_30.rsp  bat_grid_31.rsp
simmes/util_packages/files-swift-trigger-algs/: sample.dpi
simmes/util_packages/files-swiftBAT-resp-mats/: BAT_alldet_grid_01.rsp  BAT_alldet_grid_02.rsp  BAT_alldet_grid_03.rsp  BAT_alldet_grid_04.rsp  BAT_alldet_grid_07.rsp  BAT_alldet_grid_08.rsp  (+9 more)
tests/: test_GRB.py  test_RSP.py  test_bayesian_block.py  test_cosmology.py  test_fluence.py  test_simulations.py
