[build-system]
requires = ["setuptools>=61.0", 
			"setuptools-scm>=8.0",]
build-backend = "setuptools.build_meta"

[project]
name = "simmes"
version = "0.3.0"
requires-python = ">=3.8"
dependencies = [
	'Numpy >= 1.26.4, < 2',
	'Scipy  >= 1.14.0',
	'Astropy >= 6.1.2',
	'Fitsio >= 1.2.4',]
authors = [
	{ name="Michael Moss", email="mikejmoss3@gmail.com" },
]
description = "GRB measurement simulation packages"
readme = "README.md"

classifiers = [
	"Intended Audience :: Science/Research",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Astronomy",
]

[metadata]
license = ["MIT"]
license-files = "LICENCSE"
keywords=["gamma-ray bursts"]

[project.urls]
Repository = "https://github.com/mikemoss3/simmes"
